--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         app: toolify
+        version: 'v1'
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
