--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -11,7 +11,7 @@ spec:
     metadata:
       labels:
         app: toolify
-        version: 'v1'
+        version: 'v2'
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
@@ -19,7 +19,7 @@ spec:
       - name: toolify
         securityContext:
           privileged: true
-        image: gowthamd07101999/toolify:latest
+        image: gowthamd07101999/toolify:v1
         env: 
         - name: DATABASE_NAME
           value: "postgres"
