--- a/deployment/destinationreules.yaml
+++ b/deployment/destinationreules.yaml
@@ -1,11 +1,17 @@
+
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
   name: toolify
   namespace: application
 spec:
+  exportTo:
+  - '*'
   host: toolify
   subsets:
-  - labels:
-      version: 'v2'
-    name: 'v2'
+    - name: v1
+      labels:
+        version: v1
+  trafficPolicy: 
+    loadBalancer:
+      simple: ROUND_ROBIN
