--- a/deployment/gateway.yaml
+++ b/deployment/gateway.yaml
@@ -5,11 +5,11 @@ metadata:
   namespace: application
 spec:
   selector:
-    istio: ingressgateway
+    istio: ingressgateway # use istio default controller
   servers:
-  - port:
-      number: 8000
-      name: http
-      protocol: HTTP
-    hosts:
-    - "*"
+    - port:
+        number: 80
+        name: http
+        protocol: HTTP
+      hosts:
+        - "*"
