--- a/deployment/destinationreules.yaml
+++ b/deployment/destinationreules.yaml
@@ -9,12 +9,12 @@ spec:
   - '*'
   host: toolify
   subsets:
-    - name: '67890'
+    - name: 'd2c5eea'
       labels:
-        version: '67890'
-    - name: '12345'
+        version: 'd2c5eea'
+    - name: 'bd3364a'
       labels:
-        version: '12345'
+        version: 'bd3364a'
   trafficPolicy: 
     loadBalancer:
       simple: ROUND_ROBIN
