--- a/deployment/rollout.yaml
+++ b/deployment/rollout.yaml
@@ -15,8 +15,8 @@ spec:
             - toolify
           destinationRule:
             name: toolify
-            canarySubsetName: 'd2c5eea'
-            stableSubsetName: 'bd3364a'
+            canarySubsetName: 'bd3364a'
+            stableSubsetName: 'd2c5eea'
   selector:
     matchLabels:
       app: toolify
@@ -24,7 +24,7 @@ spec:
     metadata:
       labels:
         app: toolify
-        version: 'bd3364a'
+        version: 'd2c5eea'
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
@@ -32,7 +32,7 @@ spec:
       - name: toolify
         securityContext:
           privileged: true
-        image: gowthamd07101999/toolify:latest
+        image: gowthamd07101999/toolify:d2c5eea
         env: 
         - name: DATABASE_NAME
           value: "postgres"
