Updated the deloyment

--- a/deployment/rollout.yaml
+++ b/deployment/rollout.yaml
@@ -8,6 +8,7 @@ spec:
   strategy:
     canary:
       steps:
+        - setWeight: 1
         - pause: {}
         - setWeight: 100
       trafficRouting:
@@ -18,8 +19,8 @@ spec:
             - toolify
           destinationRule:
             name: toolify
-            canarySubsetName: 'd2c5eea'
-            stableSubsetName: 'bd3364a'
+            canarySubsetName: 'bd3364a'
+            stableSubsetName: 'd2c5eea'
   selector:
     matchLabels:
       app: toolify
@@ -27,7 +28,7 @@ spec:
     metadata:
       labels:
         app: toolify
-        version: 'bd3364a'
+        version: 'd2c5eea'
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
